# rocket-include-static-resources

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
examples/: readme.rs
examples/front-end/html/: README.html
src/: fairing.rs  file_resources.rs  functions.rs  lib.rs  macros.rs  manager.rs  static_resources.rs
src/debug/: fairing.rs  file_resources.rs  macros.rs  manager.rs  mod.rs  static_response.rs
src/release/: fairing.rs  macros.rs  manager.rs  mod.rs  static_resources.rs  static_response.rs
tests/: favicon.rs
