[package]
name = "rocket-include-static-resources"
version = "0.9.5"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/rocket-include-static-resources"
homepage = "https://magiclen.org/rocket-include-static-resources"
keywords = ["rocket", "server", "web", "static", "file"]
categories = ["web-programming"]
description = "This is a crate which provides macros `static_resources_initialize!` and `static_response!` to statically include files from your Rust project and make them be the HTTP response sources quickly."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[badges.travis-ci]
repository = "magiclen/rocket-include-static-resources"
branch = "master"

[dependencies]
rocket = "0.4.2"
mime = "0.3.13"
mime_guess = " 2"
crc-any = "2"
rc-u8-reader = "2"

rocket-etag-if-none-match = "0.3"